including back >  and adding spacing

--- a/index.html
+++ b/index.html
@@ -367,7 +367,8 @@ El Centinela de la Seguridad: Novena Semana
 </p>
 <!-- <p style = "font-size: 20px; color: Gray;"> El Centinela de la Seguridad </p> -->
 <!-- <p style = "font-size: 15px; color: Magenta;"> DIAGNÓSTICO: SE CONSOLIDAN LOS AVANCES (Serie por debajo del Promedio)</p> -->
-<br>
+<p><br></p>
+<blockquote>
 <p style="text-align:left">
 La semana del 25 de noviembre al 1 de diciembre del 2024, se registraron
 532 homicidios, un valor apenas por debajo de la línea de Control
@@ -380,6 +381,7 @@ A partir de la próxima semana, recalcaremos todos los límites. El nuevo
 límite central será de 515 homicidios semanales. Un valor mayor que lo
 deseable, pero menor que lo reportado en el pasado reciente.
 </p>
+</blockquote>
 <br>
 <center>
 <p style="font-size: 20px; color: Gray;">
